@@ -1382,19 +1382,19 @@ please see math/README to configure.',
 'userrights-groupsmember'          => 'Member of:',
 'userrights-groupsremovable'       => 'Removable groups:',
 'userrights-groupsavailable'       => 'Available groups:',
-'userrights-groupshelp'            => 'Select groups you want the user to be removed from or added to.
-Unselected groups will not be changed.
-You can deselect a group with CTRL + Left Click',
+'userrights-groupshelp'            => 'You may alter the groups this user is in. A checked box means the user is in that group. An unchecked box means the user is not in that group.',
 'userrights-reason'                => 'Reason for change:',
 'userrights-available-none'        => 'You may not alter group membership.',
-'userrights-available-add'         => 'You can add users to {{PLURAL:$2|this group|these groups}}: $1.',
-'userrights-available-remove'      => 'You can remove users from {{PLURAL:$2|this group|these groups}}: $1.',
+'userrights-available-add'         => 'You can add any user to {{PLURAL:$2|this group|these groups}}: $1.',
+'userrights-available-remove'      => 'You can remove any user from {{PLURAL:$2|this group|these groups}}: $1.',
 'userrights-available-add-self'    => 'You can add yourself to {{PLURAL:$2|this group|these groups}}: $1.',
 'userrights-available-remove-self' => 'You can remove yourself from {{PLURAL:$2|this group|these groups}}: $1.',
 'userrights-no-interwiki'          => 'You do not have permission to edit user rights on other wikis.',
 'userrights-nodatabase'            => 'Database $1 does not exist or is not local.',
 'userrights-nologin'               => 'You must [[Special:Userlogin|log in]] with an administrator account to assign user rights.',
 'userrights-notallowed'            => 'Your account does not have permission to assign user rights.',
+'userrights-changeable-col'	   => 'Groups you can change',
+'userrights-unchangeable-col'	   => 'Groups you cannot change',
 
 # Groups
 'group'               => 'Group:',
